# exploration-3d

./: .gitignore  CMakeLists.txt  README.md
config/: exploration_config.yaml
docs/: system_design.md
include/: config_loader.hpp  exploration_engine.hpp  frontier_detector.hpp  mock_drone.hpp  mqtt_client.hpp  octomap_manager.hpp  path_planner.hpp  types.hpp
proto/: drone_message.proto
ros/exploration_sim/: CMakeLists.txt  package.xml
ros/exploration_sim/launch/: exploration_sim.launch  sim_only.launch
ros/exploration_sim/rviz/: exploration.rviz
ros/exploration_sim/src/: sim_node.cpp
scripts/: build.sh  install_deps.sh
src/: config_loader.cpp  exploration_engine.cpp  frontier_detector.cpp  main.cpp  mock_drone.cpp  mqtt_client.cpp  octomap_manager.cpp  path_planner.cpp  sim_test.cpp
